Fix search button on mobile resolution

--- a/public/css/layout-basic.css
+++ b/public/css/layout-basic.css
@@ -78,6 +78,7 @@ nav:after {
     border-left: none;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
+    line-height: 38px;
 }
 
 .btn-custom-search:hover,
